# meltano-playground

./: .dockerignore  .env  .gitignore  README (docker-compose).md  README.md  docker-compose.prod.yml  docker-compose.yml  meltano.yml  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
catalogs/: earthquakes.json
helm-meltano/: README.md
orchestrate/dagster/: Dockerfile
schema/: earthquakes.json
transform/earthquakes/: dbt_project.yml
